# algos

./: .gitignore  Readme.md
go/: go.mod  sorting.go  sorting_test.go
notes/: bubble_sort_tikz.tex  main.tex  preamble.tex  sorting.tex
py/: bubble.py  pyproject.toml  selection.py  sorting.py  test_bubble.py  test_selection.py  test_sorting.py  test_sorting_benchmarks.py
